works on my laptop now